addint CV section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
           </figure>
         </span>
       </section>
+    </article>
+    <section>
+      <label for="links">
+        <link rel="stylesheet" href="">GitHub
+        <link rel="stylesheet" href="">Codepen
+        <link rel="stylesheet" href="">linkedIn
+      </label>
+    </section>
+    <article>
+      <secton>about oneself</secton>
+      <secton>CV</secton>
+    </article>
     </main>
     <footer>
       <p>Contact Details</p>
